erDiagram
    %% Simplified HBnB Database ER Diagram
    %% Focus on core entities and relationships
    
    User {
        string id PK
        string first_name
        string last_name
        string email UK
        string password
        boolean is_admin
    }
    
    Place {
        string id PK
        string title
        text description
        decimal price
        float latitude
        float longitude
        string owner_id FK
    }
    
    Review {
        string id PK
        text text
        int rating
        string user_id FK
        string place_id FK
    }
    
    Amenity {
        string id PK
        string name UK
    }
    
    Place_Amenity {
        string place_id FK
        string amenity_id FK
    }
    
    %% Core Relationships
    User ||--o{ Place : owns
    User ||--o{ Review : writes  
    Place ||--o{ Review : receives
    Place }|--|| Place_Amenity : ""
    Amenity }|--|| Place_Amenity : ""
